-- =====================================================================
--  Project Management Tool (PMT) - Schema relationnel PostgreSQL
--  Genere pour l'etude de cas RNCP Niveau 7 - LAWSON DENIS
-- =====================================================================

DROP TABLE IF EXISTS notifications CASCADE;
DROP TABLE IF EXISTS task_history CASCADE;
DROP TABLE IF EXISTS tasks CASCADE;
DROP TABLE IF EXISTS project_members CASCADE;
DROP TABLE IF EXISTS projects CASCADE;
DROP TABLE IF EXISTS users CASCADE;

-- ---------------------------------------------------------------------
--  Utilisateurs
-- ---------------------------------------------------------------------
CREATE TABLE users (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    username      VARCHAR(100) NOT NULL,
    email         VARCHAR(180) NOT NULL,
    password_hash VARCHAR(100) NOT NULL,
    created_at    TIMESTAMP    NOT NULL DEFAULT now(),
    CONSTRAINT uk_users_email    UNIQUE (email),
    CONSTRAINT uk_users_username UNIQUE (username)
);

-- ---------------------------------------------------------------------
--  Projets
-- ---------------------------------------------------------------------
CREATE TABLE projects (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name        VARCHAR(150) NOT NULL,
    description TEXT,
    start_date  DATE,
    created_at  TIMESTAMP    NOT NULL DEFAULT now()
);

-- ---------------------------------------------------------------------
--  Membres de projet (association N-N porteuse du role)
-- ---------------------------------------------------------------------
CREATE TABLE project_members (
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    project_id BIGINT      NOT NULL,
    user_id    BIGINT      NOT NULL,
    role       VARCHAR(20) NOT NULL CHECK (role IN ('ADMIN', 'MEMBER', 'OBSERVER')),
    joined_at  TIMESTAMP   NOT NULL DEFAULT now(),
    CONSTRAINT fk_member_project FOREIGN KEY (project_id) REFERENCES projects (id) ON DELETE CASCADE,
    CONSTRAINT fk_member_user    FOREIGN KEY (user_id)    REFERENCES users (id)    ON DELETE CASCADE,
    CONSTRAINT uk_member_project_user UNIQUE (project_id, user_id)
);

-- ---------------------------------------------------------------------
--  Taches
-- ---------------------------------------------------------------------
CREATE TABLE tasks (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    project_id  BIGINT       NOT NULL,
    name        VARCHAR(150) NOT NULL,
    description TEXT,
    due_date    DATE,
    end_date    DATE,
    priority    VARCHAR(20)  NOT NULL DEFAULT 'MEDIUM' CHECK (priority IN ('LOW', 'MEDIUM', 'HIGH')),
    status      VARCHAR(20)  NOT NULL DEFAULT 'TODO'   CHECK (status IN ('TODO', 'IN_PROGRESS', 'DONE')),
    assignee_id BIGINT,
    created_at  TIMESTAMP    NOT NULL DEFAULT now(),
    updated_at  TIMESTAMP    NOT NULL DEFAULT now(),
    CONSTRAINT fk_task_project  FOREIGN KEY (project_id)  REFERENCES projects (id) ON DELETE CASCADE,
    CONSTRAINT fk_task_assignee FOREIGN KEY (assignee_id) REFERENCES users (id)    ON DELETE SET NULL
);

CREATE INDEX idx_tasks_project ON tasks (project_id);
CREATE INDEX idx_tasks_status  ON tasks (status);

-- ---------------------------------------------------------------------
--  Historique des modifications de taches
-- ---------------------------------------------------------------------
CREATE TABLE task_history (
    id                 BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    task_id            BIGINT       NOT NULL,
    changed_by         BIGINT,
    change_description VARCHAR(500) NOT NULL,
    changed_at         TIMESTAMP    NOT NULL DEFAULT now(),
    CONSTRAINT fk_history_task FOREIGN KEY (task_id)    REFERENCES tasks (id) ON DELETE CASCADE,
    CONSTRAINT fk_history_user FOREIGN KEY (changed_by) REFERENCES users (id) ON DELETE SET NULL
);

CREATE INDEX idx_history_task ON task_history (task_id);

-- ---------------------------------------------------------------------
--  Notifications
-- ---------------------------------------------------------------------
CREATE TABLE notifications (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    recipient_id BIGINT       NOT NULL,
    task_id      BIGINT,
    message      VARCHAR(500) NOT NULL,
    is_read      BOOLEAN      NOT NULL DEFAULT FALSE,
    created_at   TIMESTAMP    NOT NULL DEFAULT now(),
    CONSTRAINT fk_notif_user FOREIGN KEY (recipient_id) REFERENCES users (id) ON DELETE CASCADE,
    CONSTRAINT fk_notif_task FOREIGN KEY (task_id)      REFERENCES tasks (id) ON DELETE CASCADE
);

CREATE INDEX idx_notif_recipient ON notifications (recipient_id);
